tests/NormalTests/paczka2/big_fuzzy/38035417.err
Error in line 5: KXKRmYxkWXo S620 95,4
Error in line 16: KXKRmYxkWXo A`3` 49,4
Error in line 18: KXKRmxkWXo A232 190,7
Error in line 20: V2LxBcjYc S70 39,
Error in line 7: KXKRmYxkWXo A967 54,2
Error in line 6: V2LxBcjYc S620 42,2
Error in line 26: A232 S570 93,3
Error in line 30: A232 A967 67,7
Error in line 39: 3BvtoQa A967 85,1
Error in line 38: KXKRmYxkWXo S620 21,0
Error in line 41: NShyNyBd A232 62,4
Error in line 29: V2LxBcjYc S570 182,5
Error in line 55: 3BvtoQa S570 43,0
Error in line 60: 3BvtoQa S570 59,5
Error in line 14: 0Lts A967 127,8
Error in line 66: CAkEt A232 77,8
Error in line 82: 0Lts S570 30,4
Error in line 88: 0Lts A232 243,O
Error in line 84: 0Lts A232 94,6
Error in line 90: NShyNyBd A232 49,9
Error in line 85: KXKRmYxkWXo S620 38,5
Error in line 100: V2LxBcjYc S620 75,2
Error in line 104: 0Lts S570 -1,5
Error in line 70: 3BvtoQa A232 3,8
Error in line 106: 3BvtoQa S620 34,1
Error in line 121: 0Lts S570 212,7
Error in line 133: V2LxBcjYc S570 8,2
Error in line 142: CAkEt S570 13,4
Error in line 144: CAkt S620 106,5
Error in line 135: V2LxBcjYc A967 29,7
Error in line 148: A232 A232 43,9
Error in line 146: V2LxBcjYc S570 51,8
Error in line 151: A232 S620 47,4
Error in line 143: CAkEt S620 79,5
Error in line 166: 3BvtoQa S570 -3,0
Error in line 156: 3BvtoQa S570 75,7
Error in line 172: KXKRmYxkWXo A232 45,2
Error in line 175: A232 A967 91,1
Error in line 181: A232 S620 5,7
Error in line 182: A232 A232 88,9
Error in line 177: KXKRmYxkWXo A967 9,0
Error in line 206: CAkEt S570 30,1
Error in line 216: KXKRmYxkWXo A967 24,2
Error in line 220: 3BvtoQa S570 4,9
Error in line 223: 3BvtoQa A967 34,1
Error in line 230: KXKRmYxkWXo S620 75,4
Error in line 219: 0Lts A967 79,7
Error in line 158: V2LxBcjYc A232 167,4
Error in line 237: A232 S570 46,7
Error in line 244: A232 A967 16,0
